<resources>
    <string name="app_name">TableGamers</string>
    <string name="email">Email</string>
    <string name="log_password">Contraseña</string>
    <string name="log_fogot_password">He olvidado mi contraseña</string>
    <string name="log_access">Acceder</string>
    <string name="log_register">Registrarse</string>
    <string name="reg_name">Nombre</string>
    <string name="reg_email">Email</string>
    <string name="reg_password">Contraseña</string>
    <string name="reg_pass_repeat">Repite contraseña</string>
    <string name="reg_term_cond">Acepto los términos y condiciones</string>
    <string name="reg_nickname">Nickname</string>
    <string name="reg_phone">Telefono</string>
    <string name="message_reg_user">Usuario registrado</string>
    <string name="message_reg_user_error">Error al registrar usuario</string>
    <string name="dialog_btn_ok">Aceptar</string>
    <string name="lorem_ipsum_short">Lorem ipsum</string>
    <string name="title_activity_navigation_menu">NavigationMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_ad">Anuncios</string>
    <string name="menu_myad">Mis Anuncios</string>
    <string name="menu_messages">Mensajes</string>
    <string name="menu_event">Eventos</string>
    <string name="menu_invitation">Invitaciones</string>
    <string name="menu_logout">Cerrar sesión</string>
    <string name="menu_profile">Perfil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_reequest_pass">Reestrablecer Contraseña</string>
    <string name="profile_save">Guardar</string>
    <string name="profile_mydata">Mi datos</string>
    <string name="dialog_select_avatar">Selecciona un avatar</string>
    <string name="btn_selecction">Seleccionar</string>
    <string name="lorem_ipsum_long">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="chat">Enviar mensaje</string>
    <string name="ver_telefono">Contactar</string>
    <string name="resource_titulo">Titulo</string>
    <string name="nuevo">Nuevo</string>
    <string name="poco_usado">Poco usado</string>
    <string name="antiguo">Antiguo</string>
    <string name="precio">Precio</string>
    <string name="descripcion">Descripcion</string>
    <string name="eliminar">Eliminar</string>
    <string name="guardar">Guardar</string>


    <string-array name="poblaciones">
        <item>Poblacion1</item>
        <item>Poblacion2</item>
        <item>Poblacion3</item>
        <item>Poblacion4</item>
    </string-array>

    <string-array name="provincias">
        <item>Albacete</item>
        <item>Alicante/Alacant</item>
        <item>Almería</item>
        <item>Araba/Álava</item>
        <item>Asturias</item>
        <item>Ávila</item>
        <item>Badajoz</item>
        <item>Balears, Illes</item>
        <item>Barcelona</item>
        <item>Bizkaia</item>
        <item>Burgos</item>
        <item>Cáceres</item>
        <item>Cádiz</item>
        <item>Cantabria</item>
        <item>Castellón/Castelló</item>
        <item>Ciudad Real</item>
        <item>Córdoba</item>
        <item>Coruña, A</item>
        <item>Cuenca</item>
        <item>Gipuzkoa</item>
        <item>Girona</item>
        <item>Granada</item>
        <item>Guadalajara</item>
        <item>Huelva</item>
        <item>Huesca</item>
        <item>Jaén</item>
        <item>León</item>
        <item>Lleida</item>
        <item>Lugo</item>
        <item>Madrid</item>
        <item>Málaga</item>
        <item>Murcia</item>
        <item>Navarra</item>
        <item>Ourense</item>
        <item>Palencia</item>
        <item>Palmas, Las</item>
        <item>Pontevedra</item>
        <item>Rioja, La</item>
        <item>Salamanca</item>
        <item>Santa Cruz de Tenerife</item>
        <item>Segovia</item>
        <item>Sevilla</item>
        <item>Soria</item>
        <item>Tarragona</item>
        <item>Teruel</item>
        <item>Toledo</item>
        <item>Valencia/València</item>
        <item>Valladolid</item>
        <item>Zamora</item>
        <item>Zaragoza</item>
        <item>Ceuta</item>
        <item>Melilla</item>
    </string-array>

    <string-array name="states">
        <item>Nuevo</item>
        <item>Poco usado</item>
        <item>Antiguo</item>
    </string-array>

    <string-array name="event_type">
        <item>Publico</item>
        <item>Privado</item>
    </string-array>
</resources>