<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="ad"
            type="es.amunoz.tablegamers.models.Ad" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/purple_50"

        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_fad_hedar"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:adjustViewBounds="true"
            android:elevation="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/side_nav_bar" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fb_fad_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="135dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:onClick="clickUploadImages"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_menu_camera"
            android:backgroundTint="@color/colorPrimaryDark"
            app:tint="@color/white" />

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:elevation="5dp"
            app:cardCornerRadius="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fb_fad_photo">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:padding="8dp">


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/til_fad_description">

                        <Button
                            android:id="@+id/btn_fad_form"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/green_500"
                            android:onClick="clickSaveFormAd"
                            android:text="@string/guardar" />

                        <Button
                            android:id="@+id/btn_fad_delete"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/red_500"
                            android:text="@string/eliminar" />


                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_fad_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tiet_fad_title"
                            android:layout_width="match_parent"

                            android:layout_height="wrap_content"
                            android:hint="@string/resource_titulo" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/cg_fad_state"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal"

                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/til_fad_title">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/c_fad_state1"
                            android:text="@string/nuevo"
                            android:textColor="@color/white"
                            app:chipBackgroundColor="@color/green_500"

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/c_fad_state2"
                            android:text="@string/poco_usado"
                            android:layout_width="wrap_content" android:textColor="@color/white"
                            app:chipBackgroundColor="@color/amber_500"

                            android:layout_height="wrap_content" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/c_fad_state3"
                            android:layout_width="wrap_content"
                            android:text="@string/antiguo"
                            android:textColor="@color/white"
                            app:chipBackgroundColor="@color/red_500"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.chip.ChipGroup>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_fad_price"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cg_fad_state">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tiet_fad_price"
                            android:layout_width="match_parent"

                            android:inputType="number"
                            android:layout_height="wrap_content"
                            android:hint="@string/precio" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/tv_fad_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="Localizacion"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/til_fad_price" />

                    <Spinner
                        android:id="@+id/sp_fad_province"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:entries="@array/provincias"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_fad_location" />

                    <Spinner
                        android:id="@+id/sp_fad_poblation"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:entries="@array/poblaciones"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/sp_fad_province" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_fad_description"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/sp_fad_poblation">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tiet_fad_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:hint="@string/descripcion"
                            android:inputType="textMultiLine" />
                    </com.google.android.material.textfield.TextInputLayout>



                </androidx.constraintlayout.widget.ConstraintLayout>


            </ScrollView>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>