<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="260dp"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:minHeight="60dp"
        android:id="@+id/dialogHeader"
        android:orientation="vertical"
        android:padding="10dp">


        <TextView
            android:id="@+id/tvTitleFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="16dp"
            android:text="Filtros"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/grey_800" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|start"
        android:orientation="vertical"
        android:padding="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_filter_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resource_titulo" />

        <EditText
            android:id="@+id/et_filter_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
             />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_filter_"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/precio" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_filter_price_1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

            <EditText
                android:id="@+id/et_filter_price_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Provincia" />

        <Spinner
            android:id="@+id/sp_filter_province"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:entries="@array/provincias"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_filter_validation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/red_500"
            android:textAlignment="center"
            android:visibility="gone"
              />

        <Button
            android:id="@+id/btn_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_btn_ok" />
        <Button
            android:id="@+id/btn_filter_clear"
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.Button.TextButton"

            android:layout_height="wrap_content"
            android:text="Borrar filtros" />


    </LinearLayout>



</LinearLayout>